# sparse-solver-gym

./: .gitignore  CMakeLists.txt  README.md  run-tests.sh
include/sparse_solver_gym/: sample.hpp  solver_gym.hpp  solver_gym_c.h  solver_gym_cxx.hpp
src/: CMakeLists.txt  sample.cpp  solver_gym.cpp  solver_gym_cxx.cpp  solver_gym_main.cpp
test/: CMakeLists.txt  fake_solver_plugin.cpp  json_test.cpp  random_banded_sparse_config.json  sample_test.cpp  solver_gym_c_api_test.cpp  solver_gym_test.cpp
